src/minicParser.cpp

// Generated from minic.g4 by ANTLR 4.8


#include "minicVisitor.h"

#include "minicParser.h"


using namespace antlrcpp;
using namespace antlr4;

minicParser::minicParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

minicParser::~minicParser() {
  delete _interpreter;
}

std::string minicParser::getGrammarFileName() const {
  return "minic.g4";
}

const std::vector<std::string>& minicParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& minicParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgContext ------------------------------------------------------------------

minicParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* minicParser::ProgContext::EOF() {
  return getToken(minicParser::EOF, 0);
}

std::vector<minicParser::ProgramContext *> minicParser::ProgContext::program() {
  return getRuleContexts<minicParser::ProgramContext>();
}

minicParser::ProgramContext* minicParser::ProgContext::program(size_t i) {
  return getRuleContext<minicParser::ProgramContext>(i);
}


size_t minicParser::ProgContext::getRuleIndex() const {
  return minicParser::RuleProg;
}


antlrcpp::Any minicParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

minicParser::ProgContext* minicParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, minicParser::RuleProg);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(56);
      program();
      setState(59); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << minicParser::T__1)
      | (1ULL << minicParser::T__2)
      | (1ULL << minicParser::T__3)
      | (1ULL << minicParser::T__4)
      | (1ULL << minicParser::T__5)
      | (1ULL << minicParser::T__16)
      | (1ULL << minicParser::T__20)
      | (1ULL << minicParser::T__21)
      | (1ULL << minicParser::T__22)
      | (1ULL << minicParser::T__23)
      | (1ULL << minicParser::T__24)
      | (1ULL << minicParser::T__27)
      | (1ULL << minicParser::T__29)
      | (1ULL << minicParser::T__33)
      | (1ULL << minicParser::T__34)
      | (1ULL << minicParser::T__35)
      | (1ULL << minicParser::T__37)
      | (1ULL << minicParser::T__38)
      | (1ULL << minicParser::ID)
      | (1ULL << minicParser::NUMBER)
      | (1ULL << minicParser::LITERAL)
      | (1ULL << minicParser::STRING))) != 0));
    setState(61);
    match(minicParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrowExprContext ------------------------------------------------------------------

minicParser::ArrowExprContext::ArrowExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::ArrowExprContext::getRuleIndex() const {
  return minicParser::RuleArrowExpr;
}

void minicParser::ArrowExprContext::copyFrom(ArrowExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BinaryArrowContext ------------------------------------------------------------------

std::vector<minicParser::ExprContext *> minicParser::BinaryArrowContext::expr() {
  return getRuleContexts<minicParser::ExprContext>();
}

minicParser::ExprContext* minicParser::BinaryArrowContext::expr(size_t i) {
  return getRuleContext<minicParser::ExprContext>(i);
}

minicParser::BinaryArrowContext::BinaryArrowContext(ArrowExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BinaryArrowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBinaryArrow(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ArrowPassContext ------------------------------------------------------------------

minicParser::ExprContext* minicParser::ArrowPassContext::expr() {
  return getRuleContext<minicParser::ExprContext>(0);
}

minicParser::ArrowPassContext::ArrowPassContext(ArrowExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ArrowPassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitArrowPass(this);
  else
    return visitor->visitChildren(this);
}
minicParser::ArrowExprContext* minicParser::arrowExpr() {
  ArrowExprContext *_localctx = _tracker.createInstance<ArrowExprContext>(_ctx, getState());
  enterRule(_localctx, 2, minicParser::RuleArrowExpr);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(68);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ArrowExprContext *>(_tracker.createInstance<minicParser::ArrowPassContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(63);
      expr();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ArrowExprContext *>(_tracker.createInstance<minicParser::BinaryArrowContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(64);
      expr();
      setState(65);
      match(minicParser::T__0);
      setState(66);
      expr();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnaryExprContext ------------------------------------------------------------------

minicParser::UnaryExprContext::UnaryExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::UnaryExprContext::getRuleIndex() const {
  return minicParser::RuleUnaryExpr;
}

void minicParser::UnaryExprContext::copyFrom(UnaryExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnaryOperateContext ------------------------------------------------------------------

minicParser::ArrowExprContext* minicParser::UnaryOperateContext::arrowExpr() {
  return getRuleContext<minicParser::ArrowExprContext>(0);
}

minicParser::UnaryOperateContext::UnaryOperateContext(UnaryExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::UnaryOperateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitUnaryOperate(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnaryPassContext ------------------------------------------------------------------

minicParser::ArrowExprContext* minicParser::UnaryPassContext::arrowExpr() {
  return getRuleContext<minicParser::ArrowExprContext>(0);
}

minicParser::UnaryPassContext::UnaryPassContext(UnaryExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::UnaryPassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitUnaryPass(this);
  else
    return visitor->visitChildren(this);
}
minicParser::UnaryExprContext* minicParser::unaryExpr() {
  UnaryExprContext *_localctx = _tracker.createInstance<UnaryExprContext>(_ctx, getState());
  enterRule(_localctx, 4, minicParser::RuleUnaryExpr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(73);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case minicParser::T__1:
      case minicParser::T__2:
      case minicParser::T__3:
      case minicParser::T__4:
      case minicParser::T__5: {
        _localctx = dynamic_cast<UnaryExprContext *>(_tracker.createInstance<minicParser::UnaryOperateContext>(_localctx));
        enterOuterAlt(_localctx, 1);
        setState(70);
        dynamic_cast<UnaryOperateContext *>(_localctx)->OP = _input->LT(1);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << minicParser::T__1)
          | (1ULL << minicParser::T__2)
          | (1ULL << minicParser::T__3)
          | (1ULL << minicParser::T__4)
          | (1ULL << minicParser::T__5))) != 0))) {
          dynamic_cast<UnaryOperateContext *>(_localctx)->OP = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(71);
        arrowExpr();
        break;
      }

      case minicParser::T__16:
      case minicParser::ID:
      case minicParser::NUMBER:
      case minicParser::LITERAL:
      case minicParser::STRING: {
        _localctx = dynamic_cast<UnaryExprContext *>(_tracker.createInstance<minicParser::UnaryPassContext>(_localctx));
        enterOuterAlt(_localctx, 2);
        setState(72);
        arrowExpr();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MultiplicativeExprContext ------------------------------------------------------------------

minicParser::MultiplicativeExprContext::MultiplicativeExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::MultiplicativeExprContext::getRuleIndex() const {
  return minicParser::RuleMultiplicativeExpr;
}

void minicParser::MultiplicativeExprContext::copyFrom(MultiplicativeExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BinaryMultiplicativeContext ------------------------------------------------------------------

minicParser::MultiplicativeExprContext* minicParser::BinaryMultiplicativeContext::multiplicativeExpr() {
  return getRuleContext<minicParser::MultiplicativeExprContext>(0);
}

minicParser::UnaryExprContext* minicParser::BinaryMultiplicativeContext::unaryExpr() {
  return getRuleContext<minicParser::UnaryExprContext>(0);
}

minicParser::BinaryMultiplicativeContext::BinaryMultiplicativeContext(MultiplicativeExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BinaryMultiplicativeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBinaryMultiplicative(this);
  else
    return visitor->visitChildren(this);
}
//----------------- MultiplicativePassContext ------------------------------------------------------------------

minicParser::UnaryExprContext* minicParser::MultiplicativePassContext::unaryExpr() {
  return getRuleContext<minicParser::UnaryExprContext>(0);
}

minicParser::MultiplicativePassContext::MultiplicativePassContext(MultiplicativeExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::MultiplicativePassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitMultiplicativePass(this);
  else
    return visitor->visitChildren(this);
}

minicParser::MultiplicativeExprContext* minicParser::multiplicativeExpr() {
   return multiplicativeExpr(0);
}

minicParser::MultiplicativeExprContext* minicParser::multiplicativeExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  minicParser::MultiplicativeExprContext *_localctx = _tracker.createInstance<MultiplicativeExprContext>(_ctx, parentState);
  minicParser::MultiplicativeExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, minicParser::RuleMultiplicativeExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<MultiplicativePassContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(76);
    unaryExpr();
    _ctx->stop = _input->LT(-1);
    setState(83);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<BinaryMultiplicativeContext>(_tracker.createInstance<MultiplicativeExprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleMultiplicativeExpr);
        setState(78);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(79);
        dynamic_cast<BinaryMultiplicativeContext *>(_localctx)->OP = _input->LT(1);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << minicParser::T__4)
          | (1ULL << minicParser::T__6)
          | (1ULL << minicParser::T__7))) != 0))) {
          dynamic_cast<BinaryMultiplicativeContext *>(_localctx)->OP = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(80);
        unaryExpr(); 
      }
      setState(85);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- AdditiveExprContext ------------------------------------------------------------------

minicParser::AdditiveExprContext::AdditiveExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::AdditiveExprContext::getRuleIndex() const {
  return minicParser::RuleAdditiveExpr;
}

void minicParser::AdditiveExprContext::copyFrom(AdditiveExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BinaryAdditiveContext ------------------------------------------------------------------

minicParser::AdditiveExprContext* minicParser::BinaryAdditiveContext::additiveExpr() {
  return getRuleContext<minicParser::AdditiveExprContext>(0);
}

minicParser::MultiplicativeExprContext* minicParser::BinaryAdditiveContext::multiplicativeExpr() {
  return getRuleContext<minicParser::MultiplicativeExprContext>(0);
}

minicParser::BinaryAdditiveContext::BinaryAdditiveContext(AdditiveExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BinaryAdditiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBinaryAdditive(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AdditivePassContext ------------------------------------------------------------------

minicParser::MultiplicativeExprContext* minicParser::AdditivePassContext::multiplicativeExpr() {
  return getRuleContext<minicParser::MultiplicativeExprContext>(0);
}

minicParser::AdditivePassContext::AdditivePassContext(AdditiveExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::AdditivePassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitAdditivePass(this);
  else
    return visitor->visitChildren(this);
}

minicParser::AdditiveExprContext* minicParser::additiveExpr() {
   return additiveExpr(0);
}

minicParser::AdditiveExprContext* minicParser::additiveExpr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  minicParser::AdditiveExprContext *_localctx = _tracker.createInstance<AdditiveExprContext>(_ctx, parentState);
  minicParser::AdditiveExprContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, minicParser::RuleAdditiveExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<AdditivePassContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(87);
    multiplicativeExpr(0);
    _ctx->stop = _input->LT(-1);
    setState(94);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<BinaryAdditiveContext>(_tracker.createInstance<AdditiveExprContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleAdditiveExpr);
        setState(89);

        if (!(precpred(_ctx, 1))) throw FailedPredicateException(this, "precpred(_ctx, 1)");
        setState(90);
        dynamic_cast<BinaryAdditiveContext *>(_localctx)->OP = _input->LT(1);
        _la = _input->LA(1);
        if (!(_la == minicParser::T__1

        || _la == minicParser::T__2)) {
          dynamic_cast<BinaryAdditiveContext *>(_localctx)->OP = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(91);
        multiplicativeExpr(0); 
      }
      setState(96);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- ComparisonExprContext ------------------------------------------------------------------

minicParser::ComparisonExprContext::ComparisonExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::ComparisonExprContext::getRuleIndex() const {
  return minicParser::RuleComparisonExpr;
}

void minicParser::ComparisonExprContext::copyFrom(ComparisonExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BinaryComparisonContext ------------------------------------------------------------------

std::vector<minicParser::AdditiveExprContext *> minicParser::BinaryComparisonContext::additiveExpr() {
  return getRuleContexts<minicParser::AdditiveExprContext>();
}

minicParser::AdditiveExprContext* minicParser::BinaryComparisonContext::additiveExpr(size_t i) {
  return getRuleContext<minicParser::AdditiveExprContext>(i);
}

minicParser::BinaryComparisonContext::BinaryComparisonContext(ComparisonExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BinaryComparisonContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBinaryComparison(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ComparisonPassContext ------------------------------------------------------------------

minicParser::AdditiveExprContext* minicParser::ComparisonPassContext::additiveExpr() {
  return getRuleContext<minicParser::AdditiveExprContext>(0);
}

minicParser::ComparisonPassContext::ComparisonPassContext(ComparisonExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ComparisonPassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitComparisonPass(this);
  else
    return visitor->visitChildren(this);
}
minicParser::ComparisonExprContext* minicParser::comparisonExpr() {
  ComparisonExprContext *_localctx = _tracker.createInstance<ComparisonExprContext>(_ctx, getState());
  enterRule(_localctx, 10, minicParser::RuleComparisonExpr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(102);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<ComparisonExprContext *>(_tracker.createInstance<minicParser::BinaryComparisonContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(97);
      additiveExpr(0);
      setState(98);
      dynamic_cast<BinaryComparisonContext *>(_localctx)->OP = _input->LT(1);
      _la = _input->LA(1);
      if (!((((_la & ~ 0x3fULL) == 0) &&
        ((1ULL << _la) & ((1ULL << minicParser::T__8)
        | (1ULL << minicParser::T__9)
        | (1ULL << minicParser::T__10)
        | (1ULL << minicParser::T__11)
        | (1ULL << minicParser::T__12)
        | (1ULL << minicParser::T__13))) != 0))) {
        dynamic_cast<BinaryComparisonContext *>(_localctx)->OP = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(99);
      additiveExpr(0);
      break;
    }

    case 2: {
      _localctx = dynamic_cast<ComparisonExprContext *>(_tracker.createInstance<minicParser::ComparisonPassContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(101);
      additiveExpr(0);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BooleanExprContext ------------------------------------------------------------------

minicParser::BooleanExprContext::BooleanExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::BooleanExprContext::getRuleIndex() const {
  return minicParser::RuleBooleanExpr;
}

void minicParser::BooleanExprContext::copyFrom(BooleanExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BooleanPassContext ------------------------------------------------------------------

minicParser::ComparisonExprContext* minicParser::BooleanPassContext::comparisonExpr() {
  return getRuleContext<minicParser::ComparisonExprContext>(0);
}

minicParser::BooleanPassContext::BooleanPassContext(BooleanExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BooleanPassContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBooleanPass(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryBooleanContext ------------------------------------------------------------------

std::vector<minicParser::ComparisonExprContext *> minicParser::BinaryBooleanContext::comparisonExpr() {
  return getRuleContexts<minicParser::ComparisonExprContext>();
}

minicParser::ComparisonExprContext* minicParser::BinaryBooleanContext::comparisonExpr(size_t i) {
  return getRuleContext<minicParser::ComparisonExprContext>(i);
}

minicParser::BinaryBooleanContext::BinaryBooleanContext(BooleanExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::BinaryBooleanContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitBinaryBoolean(this);
  else
    return visitor->visitChildren(this);
}
minicParser::BooleanExprContext* minicParser::booleanExpr() {
  BooleanExprContext *_localctx = _tracker.createInstance<BooleanExprContext>(_ctx, getState());
  enterRule(_localctx, 12, minicParser::RuleBooleanExpr);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(109);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      _localctx = dynamic_cast<BooleanExprContext *>(_tracker.createInstance<minicParser::BinaryBooleanContext>(_localctx));
      enterOuterAlt(_localctx, 1);
      setState(104);
      comparisonExpr();
      setState(105);
      dynamic_cast<BinaryBooleanContext *>(_localctx)->OP = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == minicParser::T__14

      || _la == minicParser::T__15)) {
        dynamic_cast<BinaryBooleanContext *>(_localctx)->OP = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(106);
      comparisonExpr();
      break;
    }

    case 2: {
      _localctx = dynamic_cast<BooleanExprContext *>(_tracker.createInstance<minicParser::BooleanPassContext>(_localctx));
      enterOuterAlt(_localctx, 2);
      setState(108);
      comparisonExpr();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

minicParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t minicParser::ExprContext::getRuleIndex() const {
  return minicParser::RuleExpr;
}

void minicParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- ExprCallContext ------------------------------------------------------------------

minicParser::FunctionCallContext* minicParser::ExprCallContext::functionCall() {
  return getRuleContext<minicParser::FunctionCallContext>(0);
}

minicParser::ExprCallContext::ExprCallContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprCall(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprStringContext ------------------------------------------------------------------

tree::TerminalNode* minicParser::ExprStringContext::STRING() {
  return getToken(minicParser::STRING, 0);
}

minicParser::ExprStringContext::ExprStringContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprStringContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprString(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprIdentifierContext ------------------------------------------------------------------

minicParser::IdentifierContext* minicParser::ExprIdentifierContext::identifier() {
  return getRuleContext<minicParser::IdentifierContext>(0);
}

minicParser::ExprIdentifierContext::ExprIdentifierContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprIdentifier(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprParenthesisContext ------------------------------------------------------------------

minicParser::BooleanExprContext* minicParser::ExprParenthesisContext::booleanExpr() {
  return getRuleContext<minicParser::BooleanExprContext>(0);
}

minicParser::ExprParenthesisContext::ExprParenthesisContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprParenthesisContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprParenthesis(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprNumberContext ------------------------------------------------------------------

tree::TerminalNode* minicParser::ExprNumberContext::NUMBER() {
  return getToken(minicParser::NUMBER, 0);
}

minicParser::ExprNumberContext::ExprNumberContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprNumberContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprNumber(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExprLiteralContext ------------------------------------------------------------------

tree::TerminalNode* minicParser::ExprLiteralContext::LITERAL() {
  return getToken(minicParser::LITERAL, 0);
}

minicParser::ExprLiteralContext::ExprLiteralContext(ExprContext *ctx) { copyFrom(ctx); }


antlrcpp::Any minicParser::ExprLiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<minicVisitor*>(visitor))
    return parserVisitor->visitExprLiteral(this);
  else
    return visitor->visitChildren(this);
}
minicParser::ExprContext* minicParser::expr() {
  ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, getState());
  enterRule(_localctx, 14, minicParser::RuleExpr);
